--- a/src/Components/Cells/ChatList/styles.css
+++ b/src/Components/Cells/ChatList/styles.css
@@ -76,22 +76,16 @@
 
 }
 
-.recent {
-  background-color: red;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-}
 
 .unseenCount {
-  background-color: red;
+  background-color: rgb(251, 246, 246);
   height: fit-content;
   width: fit-content;
   border-radius: 10px;
   padding-left: 1.5%;
   padding-right: 1.5%;
   margin: 2.5%;
-  color: white
+  color: rgb(10, 7, 7)
     /* color:red; */
 
 
